--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,7 @@
+<meta name="viewport" content="width=device-width, initial-scale=0.55, shrink-to-fit=No">
+<h1 class="top"> Let users choose their Favorite car brand and model</h1>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
 <div class="mat-app-background basic-container">
   <select-reactive-form-example>loading</select-reactive-form-example>
 </div>
-<span class="version-info">Current build: 10.0.1</span>
-
-
-<!-- Copyright 2020 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
+<span class="copyright">@Copyright:KannanGanesan</span>
